# termux-mtkclient

./: MANIFEST.in  README.md  mtk.py  mtk_console.spec  pyproject.toml  requirements.txt
examples/: vbmeta.img.empty
mtkclient/Tools/: brom_to_offs.py  da_parser.py  emulate_preloader.py  enc_test.py  get_preloader_values.py  patch_legacy.py  patch_preloader.py  preloader_emu_mmc.py  stage2.py  whitelist_parser.py
mtkclient/config/: brom_config.py  mtk_config.py  payloads.py  usb_ids.py
mtkclient/src/da_x/: Makefile  da_x.c
mtkclient/src/da_x/common/: generic.ld  libc.h
mtkclient/src/da_x/crypto/: sha256.h
mtkclient/src/da_x_64/: Makefile  da_x_64.c
mtkclient/src/da_x_64/common/: start.S
mtkclient/src/da_xml/: Makefile  da_xml.c
mtkclient/src/da_xml/common/: libc.c  start.S
mtkclient/src/dastage/: Makefile  libc.c  pl.c  pl.ld  printf.h
mtkclient/src/dastage/drivers/: mmc.c  mmc.h  mt_sd.h  sd.c
mtkclient/src/stage1/: Makefile  emulate_payload.py
mtkclient/src/stage2/: Makefile
mtkclient/src/stage2/common/: printf.c  printf.h  stage2.c  stage2.ld  tools.c  tools.h
mtkclient/src/stage2/drivers/: mmc.c  sd.c  sleepy.c  types.h
mtkclient/src/stage2_static/: Makefile  readme.build  stage2.c  stage2.ld  tools.c  tools.h
mtkclient/src/stage2_static/drivers/: mmc.c  mmc.h  mt_sd.h  sd.c  sleepy.h
